# monarch-insights

./: .gitignore  AGENTS.md  CONNECTING_MONARCH.md  DISCUSSION_NOTES.md  README.md  SECURITY.md  hacs.json  pyproject.toml  setup-ha-ssh.sh
Data For CLI/: Balances_2026-04-18T15-16-41.csv  Transactions_2026-04-18T15-17-51.csv
custom_components/monarch_insights/: __init__.py  automations_examples.yaml  config_flow.py  const.py  coordinator.py  lovelace_dashboard.yaml  manifest.json  sensor.py  services.yaml  strings.json  webhook.py
custom_components/monarch_insights/_vendored/monarch_insights/: __init__.py  config.py
custom_components/monarch_insights/_vendored/monarch_insights 3/alerts/: __init__.py
custom_components/monarch_insights/_vendored/monarch_insights 3/cli/: bootstrap.py
custom_components/monarch_insights/_vendored/monarch_insights 3/client/: api.py
custom_components/monarch_insights/_vendored/monarch_insights 3/daemon/: scheduler.py
custom_components/monarch_insights/_vendored/monarch_insights 3/digest/: builder.py
custom_components/monarch_insights/_vendored/monarch_insights 3/forecast/: __init__.py  cashflow.py  goals.py  networth.py
custom_components/monarch_insights/_vendored/monarch_insights 3/gaps/: __init__.py  extra_rules.py
custom_components/monarch_insights/_vendored/monarch_insights 3/ha/: api.py  notifications.py
custom_components/monarch_insights/_vendored/monarch_insights 3/insights/: investments.py  recurring.py
custom_components/monarch_insights/_vendored/monarch_insights 3/models/: cashflow.py  goal.py  holding.py  snapshot.py
custom_components/monarch_insights/_vendored/monarch_insights 3/observability/: event_log.py  logging.py
custom_components/monarch_insights/_vendored/monarch_insights 3/providers/: __init__.py
custom_components/monarch_insights/_vendored/monarch_insights 3/signals/: scorer.py  technical.py
custom_components/monarch_insights/_vendored/monarch_insights 3/storage/: __init__.py
custom_components/monarch_insights/_vendored/monarch_insights 3/supplements/: documents.py  store.py  targets.py
custom_components/monarch_insights/_vendored/monarch_insights 3/watchlist/: store.py
custom_components/monarch_insights/_vendored/monarch_insights/alerts/: dispatchers.py  engine.py  rules.py
custom_components/monarch_insights/_vendored/monarch_insights/cli/: __init__.py  main.py
examples/: monarch_insights.yaml.example  monarch_sync.user.js  monarch_sync_bookmarklet.md
monarch_insights/alerts/: dispatchers.py  engine.py
monarch_insights/client/: api.py  auth.py  queries.py
monarch_insights/daemon/: __init__.py
monarch_insights/digest/: __init__.py
monarch_insights/gaps/: detector.py  requests.py
monarch_insights/ha/: __init__.py  api.py  sensors.py
monarch_insights/ingest/: __init__.py  csv_monarch.py
monarch_insights/insights/: __init__.py  cashflow.py  spending.py
monarch_insights/models/: __init__.py
monarch_insights/observability/: __init__.py
monarch_insights/providers/accounts/: email_provider.py  robinhood.py  schwab.py
monarch_insights/providers/google/: auth.py  calendar.py  drive.py  gmail.py  sheets.py
monarch_insights/providers/market_data/: finnhub.py  robinhood.py  router.py  yfinance.py
monarch_insights/signals/: fundamental.py  portfolio.py  scorer.py
monarch_insights/storage/: cache.py  snapshots.py
monarch_insights/supplements/: __init__.py  cost_basis.py  documents.py  income.py  store.py
monarch_insights/tax/: __init__.py  capital_gains.py  deductions.py  reports.py
scripts/: demo.py  monarch-insights.service  sync_vendored.py
tests/: test_client_integration.py  test_cost_basis.py  test_csv_import.py  test_demo_pipeline.py  test_digest_watchlist_daemon.py  test_edge_cases.py  test_email_pipeline.py  test_extra_gap_rules.py  test_fixtures.py  test_forecast.py  test_gaps.py  test_hacs_layout.py  test_insights.py  test_models.py  test_observability.py  test_signals.py  test_store_injection_guard.py  test_user_config.py  test_webhook.py
tests/fixtures/: __init__.py
(+39 files in other folders)
